@@ -5,3 +5,5 @@ cpptest
 clienttest
 servertest
 validatee
+efrpctest
+efrpctest_wrapper
